--- a/index.html
+++ b/index.html
@@ -769,8 +769,8 @@
           </div>
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
 
-            <p class="leading-normal my-5">1064/2 West Senpara
-              <br>Mirpur, Dhaka 1216
+            <p class="leading-normal my-5">West Senpara
+              <br>Mirpur-10, Dhaka 1216
             </p>
 
           </div>
